# flowprint

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/: index.html
examples/: reproduce_figures.py
figures/: results.json
flowprint/: __init__.py
flowprint/metrics/: __init__.py  discriminability.py  flow_metrics.py  kinetic_energy.py
flowprint/simulation/: __init__.py  coupled_oscillators.py  noise.py  topologies.py
flowprint/visualization/: __init__.py  figures.py
tests/: __init__.py  test_integration.py  test_metrics.py  test_simulation.py
